src/test/deca/syntax/valid/testAsmMethod.deca
// Test Asm Body
// Result : OK

class Test{
    int x;

    void sayHello()asm("Hi");
}
