src/test/deca/syntax/invalid/testMethodCall.deca
// Bad call of a method
// Result : Error
//
class C{
    int x;
    void sayHello(){
        print("Hello");
    }
}

{
    C c = new C();
    sayHello()
}
